# mobilerobot

./: CMakeLists.txt  Doxyfile  README.md  mobilerobot.kdev4
docs/: model.md
examples/: comparefilters.cc  kalmanfilter.cc  particlefilter.cc
include/: mobilerobot.h
include/mobilerobot/: control.h  filters.h  measurement.h  sensormodel.h  sensors.h  world.h  worldmodel.h
src/: filters.cc  sensormodel.cc  sensors.cc  world.cc  worldmodel.cc
